--- a/templates/checker.html
+++ b/templates/checker.html
@@ -1,6 +1,5 @@
 {% include "header.html" %}
 
-
 <section>
     <container>
         <!--    Search-bar-->
@@ -24,10 +23,19 @@
 <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
         <!-- Title -->
-        <h1 style="margin-top: 100px; text-align: center;">Welcome to Our<br> Stock Table</h1><br>
+        <h1 style="text-align: center;">Welcome to Our<br> Stock Table</h1><br>
         <section><!-- Stock table section -->
             <div class="container">
                 <div>
+                    <div style="text-align: center; color: red;">
+                    {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                    {% for message in messages %}
+                    <p>{{ message }}</p>
+                    {% endfor %}
+                    {% endif %}
+                    {% endwith %}
+                        </div>
                     <table class="table table-striped">
                         <thead>
                         <tr>
