--- a/templates/header.html
+++ b/templates/header.html
@@ -20,7 +20,8 @@
     <link href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/styles.min.css')}}" rel="stylesheet">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="http:///ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+    <script type="text/javascript"
+            src="http:///ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/scripts.js')}}"></script>
     <link href="https://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +30,6 @@
 </head>
 
 <body>
-
 <input id="menu" type="checkbox">
 
 <header>
@@ -38,10 +38,9 @@
 </header>
 
 <div class="navbar">
-        <ul class="navbar-nav manu ml-auto">
-            <li><a href="{{url_for('home')}}"><b>Home</b></a></li>
-            <li><a href="javascript:void(0)" ><b><label for="menu">Close</label></b></a></li>
-        </ul>
+    <ul class="navbar-nav manu ml-auto">
+        <li><a href="{{url_for('home')}}"><b>Home</b></a></li>
+        <li><a href="javascript:void(0)"><b><label for="menu">Close</label></b></a></li>
+    </ul>
 </div>
-
 </body>
